--- a/dayiapp/app/build.gradle
+++ b/dayiapp/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -17,6 +18,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    apt {
+        arguments {
+            resourcePackageName android.defaultConfig.applicationId
+            androidManifestFile variant.outputs[0]?.processResources?.manifestFile
+        }
+    }
 }
 
 dependencies {
@@ -24,7 +32,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.jakewharton:butterknife:7.0.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -38,4 +45,7 @@ dependencies {
     //轮播
     compile 'com.daimajia.androidanimations:library:1.0.3@aar'
     compile project(':HelpUtilsLibrary')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.jakewharton:butterknife:8.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
 }
