--- a/dayiapp/app/build.gradle
+++ b/dayiapp/app/build.gradle
@@ -30,6 +30,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    //    compile files('libs/GetuiExt-2.0.3.jar')
+    // 编译extras目录下的ShimmerAndroid模块
+    //轮播
+    compile project(':HelpUtilsLibrary')
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
@@ -40,12 +45,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-//    compile files('libs/GetuiExt-2.0.3.jar')
-    // 编译extras目录下的ShimmerAndroid模块
-    //轮播
     compile 'com.daimajia.androidanimations:library:1.0.3@aar'
-    compile project(':HelpUtilsLibrary')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    compile 'com.android.support:support-v4:23.4.0'
 }
