--- a/dayiapp/app/build.gradle
+++ b/dayiapp/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.1.0'
     compile 'com.android.support:support-v4:23.4.0'
+
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.aurelhubert:ahbottomnavigation:1.3.1'
 }
