--- a/dayiapp/app/src/main/AndroidManifest.xml
+++ b/dayiapp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.dayi.app"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".AppApplacation"
@@ -20,8 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".moudle.main.MainActivity"></activity>
+        <activity android:name=".moudle.main.MainActivity"/>
     </application>
 
 </manifest>
