--- a/dayiapp/app/build.gradle
+++ b/dayiapp/app/build.gradle
@@ -4,10 +4,9 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.dayi.app"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -18,12 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     apt {
         arguments {
             resourcePackageName android.defaultConfig.applicationId
             androidManifestFile variant.outputs[0]?.processResources?.manifestFile
         }
+    }
+    productFlavors {
     }
 }
 
@@ -49,7 +49,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.1.0'
     compile 'com.android.support:support-v4:23.4.0'
-
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.aurelhubert:ahbottomnavigation:1.3.1'
 }
